# rl_sim_to_real

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  README.md  build_x86.sh  docker_image_build.sh  export_images.sh  ros_entrypoint.sh  run_image.sh  trailer_planning_analysis.txt
lab_models/models/forward/lidar_24/multiplicative/logs/: evaluations.npz
lab_models/models/reverse/lidar_24/multiplicative/logs/: evaluations.npz
src/core/autoware_core/autoware_core/: package.xml
src/core/autoware_core/autoware_core/launch/: autoware_core.launch.xml
src/core/autoware_core/common/autoware_object_recognition_utils/: CMakeLists.txt
src/core/autoware_internal_msgs/autoware_internal_planning_msgs/msg/: Scenario.msg
src/core/autoware_msgs/autoware_vehicle_msgs/: CMakeLists.txt
src/core/autoware_msgs/autoware_vehicle_msgs/msg/: TrailerState.msg
src/core/autoware_utils/autoware_utils_geometry/: CMakeLists.txt
src/electrans/: convert_pcd2.py
src/electrans_rl_bridge/: package.xml  setup.cfg  setup.py
src/electrans_rl_bridge/electrans_rl_bridge/: lane_reference_node.py  rl_bridge_node.py  ros_env_adapter.py
src/electrans_rl_bridge/launch/: electrans_rl_bridge.launch.xml
src/electrans_rl_bridge/scripts/: make_bidirectional_map.py  re_export_td3.py  train_lab_model.py  widen_turn_lanelet.py
src/launcher/agilex_hunter_launch/: package.xml  setup.cfg  setup.py
src/launcher/agilex_hunter_launch/config/: vehicle_params.yaml
src/launcher/agilex_hunter_launch/launch/: sensors.launch.py
src/launcher/agilex_hunter_launch/maps/: labMapPose.g2o  pose_graph.g2o
src/launcher/autoware_launch/autoware_launch/: package.xml
src/launcher/autoware_launch/autoware_launch/launch/: autoware.launch.xml  electrans_robot_bag.launch.xml  electrans_robot_plan.launch.xml  electrans_robot_real.launch.xml  logging_simulator.launch.xml  planning_simulator.launch.xml  ringroad_real.launch.xml  ringroad_simulator.launch.xml
src/launcher/autoware_launch/autoware_launch/launch/components/: tier4_control_component.launch.xml  tier4_localization_component.launch.xml  tier4_planning_component.launch.xml  tier4_simulator_component.launch.xml  tier4_system_component.launch.xml
src/launcher/autoware_launch/autoware_launch/rviz/: autoware.rviz
src/launcher/autoware_launch/sensor_kit/electrans_robot_sensor_kit_launch/electrans_robot_sensor_kit_description/: CMakeLists.txt  package.xml
src/launcher/autoware_launch/sensor_kit/electrans_robot_sensor_kit_launch/electrans_robot_sensor_kit_launch/: CMakeLists.txt  package.xml
src/launcher/autoware_launch/sensor_kit/electrans_robot_sensor_kit_launch/electrans_robot_sensor_launch/: CMakeLists.txt  package.xml
src/launcher/autoware_launch/sensor_kit/orangebus_sensor_kit_launch/orangebus_sensor_kit_description/: CMakeLists.txt  package.xml
src/launcher/autoware_launch/sensor_kit/orangebus_sensor_kit_launch/orangebus_sensor_kit_launch/: CMakeLists.txt  package.xml
src/launcher/autoware_launch/sensor_kit/orangebus_sensor_kit_launch/orangebus_sensor_launch/: CMakeLists.txt  package.xml
src/launcher/autoware_launch/vehicle/electrans_robot_vehicle_launch/: README.md
src/launcher/autoware_launch/vehicle/electrans_robot_vehicle_launch/electrans_robot_vehicle_launch/: CMakeLists.txt  package.xml
src/launcher/autoware_launch/vehicle/electrans_robot_vehicle_launch/electrans_robot_vehicle_launch/launch/: vehicle_interface.launch.xml
src/launcher/autoware_launch/vehicle/electrans_robot_vehicle_launch/electrans_robot_vehicle_launch/src/: fixed_gear_report_publisher.cpp
src/launcher/autoware_launch/vehicle/orangebus_vehicle_launch/orangebus_vehicle_launch/: CMakeLists.txt  package.xml
src/orange_bus_scripts/: autoware_sensor_kit_base_link.yaml  check_gps_delay.py  convert_tf_to_yaml.py  rosbag1_to_ros2_autoware.py  transform_pub.launch
src/sensor_component/agilex_hunter_sensors/canbridge/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/sensor_component/agilex_hunter_sensors/canbridge/canbridge/: canbridge.py
src/sensor_component/agilex_hunter_sensors/canbridge/config/: can_params.yaml
src/sensor_component/agilex_hunter_sensors/canbridge/launch/: can_bridge.launch.py
src/sensor_component/agilex_hunter_sensors/canbridge/src/: log.h  ros2socketcan.cpp  ros2socketcan.h
src/sensor_component/agilex_hunter_sensors/frontCamera/: CHANGELOG.rst
src/sensor_component/agilex_hunter_sensors/frontCamera/front_camera_wrapper/: CMakeLists.txt  package.xml
src/sensor_component/agilex_hunter_sensors/witmotion_ros/config/: config.yml  wt905.yml
src/universe/autoware_universe/launch/tier4_localization_launch/: package.xml
src/universe/autoware_universe/launch/tier4_perception_launch/: package.xml
src/universe/autoware_universe/launch/tier4_perception_launch/launch/: perception.launch.xml
src/universe/autoware_universe/launch/tier4_perception_launch/launch/obstacle_segmentation/ground_segmentation/: ground_segmentation.launch.py
src/universe/autoware_universe/launch/tier4_simulator_launch/: package.xml
src/universe/autoware_universe/launch/tier4_system_launch/: package.xml
src/universe/autoware_universe/sensing/autoware_pointcloud_preprocessor/: CMakeLists.txt
src/universe/autoware_universe/simulator/autoware_dummy_perception_publisher/: package.xml
src/universe/autoware_universe/simulator/autoware_simple_planning_simulator/: CMakeLists.txt
src/universe/autoware_universe/visualization/autoware_trailer_state_visualizer/: CMakeLists.txt  package.xml
src/universe/autoware_universe/visualization/autoware_trailer_state_visualizer/config/: trailer_state_visualizer.param.yaml
src/universe/autoware_universe/visualization/autoware_trailer_state_visualizer/include/autoware/trailer_state_visualizer/: trailer_state_visualizer.hpp
src/universe/autoware_universe/visualization/autoware_trailer_state_visualizer/launch/: trailer_state_visualizer.launch.py
src/universe/autoware_universe/visualization/autoware_trailer_state_visualizer/src/: trailer_state_visualizer.cpp
(+84 files in other folders)
