<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>electrans_rl_bridge</name>
  <version>0.1.0</version>
  <description>Bridge between the kept Autoware stack (sensors + lanelet2 + OGM) and the e2e_rl TD3 policy. Provides a lane reference node and an RL inference node.</description>
  <maintainer email="ben.schnapp@cplaneai.com">Ben Schnapp</maintainer>
  <license>Apache License 2.0</license>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>autoware_adapi_v1_msgs</exec_depend>
  <exec_depend>autoware_control_msgs</exec_depend>
  <exec_depend>autoware_map_msgs</exec_depend>
  <exec_depend>autoware_planning_msgs</exec_depend>
  <exec_depend>autoware_vehicle_msgs</exec_depend>
  <exec_depend>autoware_lanelet2_extension_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_flake8</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
