<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tier4_perception_launch</name>
  <version>0.47.1</version>
  <description>The tier4_perception_launch package</description>
  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
  <maintainer email="yoshi.ri@tier4.jp">Yoshi Ri</maintainer>
  <maintainer email="taekjin.lee@tier4.jp">Taekjin Lee</maintainer>
  <maintainer email="masato.saeki@tier4.jp">Masato Saeki</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>
  <exec_depend>autoware_ground_segmentation</exec_depend>
  <exec_depend>autoware_occupancy_grid_map_outlier_filter</exec_depend>
  <exec_depend>autoware_pointcloud_preprocessor</exec_depend>
  <exec_depend>autoware_probabilistic_occupancy_grid_map</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
