<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_trailer_state_visualizer</name>
  <version>0.1.0</version>
  <description>
    Publishes MarkerArray and trailer_link TF for an articulated truck-trailer vehicle.
    Subscribes to truck odometry and TrailerState (hitch angle) to derive and visualize
    both bodies in RViz.
  </description>
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_vehicle_info_utils</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <!-- For the default trailer-geometry yaml path resolved in the launch.
       Override via the trailer_geometry_param_file launch arg for other vehicles. -->
  <exec_depend>electrans_robot_vehicle_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
